<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24px"
        android:title="@string/bottom_navigation_menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24px"
        android:title="@string/bottom_navigation_menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_24px"
        android:title="@string/bottom_navigation_menu_favorite"
        app:showAsAction="ifRoom" />
</menu>