<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/activity_vertical_margin"
    app:cardElevation="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/img"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tv_chapter_comment_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:paddingBottom="2.5dp"
            android:text="@string/username"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_chapter_comment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_chapter_comment_user"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:paddingTop="2.5dp"
            android:paddingBottom="5dp"
            android:text="@string/update_date"
            android:textSize="12sp"
            android:textColor="@color/secondTextColor" />

        <TextView
            android:id="@+id/tv_chapter_comment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_chapter_comment_date"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/commentText" />

    </RelativeLayout>

</android.support.v7.widget.CardView>